--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -14,6 +14,8 @@
     "@agm/core": "^1.0.0-beta.7",
     "@angular/animations": "^8.2.3",
     "@angular/cdk": "^8.1.4",
+    "@angular/cli": "~8.2.1",
+    "@angular/compiler-cli": "~8.2.0",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
@@ -25,7 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ng-select/ng-select": "^3.0.7",
     "angular-bootstrap-md": "latest",
-    "bootstrap": "4.1.1",
+    "bootstrap": "^4.3.1",
     "material-ui-bottom-sheet": "^0.5.1",
     "nativescript-material-bottomsheet": "^2.3.23",
     "ng-flash-messages": "^0.3.0",
