--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@angular/animations": "^8.2.3",
     "@angular/cdk": "^8.1.4",
     "@angular/cli": "~8.2.1",
-    "@angular/compiler-cli": "~8.2.0",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
+    "@angular/compiler-cli": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
     "@angular/material": "^8.1.4",
@@ -28,15 +28,18 @@
     "@ng-select/ng-select": "^3.0.7",
     "angular-bootstrap-md": "latest",
     "bootstrap": "^4.3.1",
+    "express": "^4.17.1",
     "material-ui-bottom-sheet": "^0.5.1",
     "nativescript-material-bottomsheet": "^2.3.23",
     "ng-flash-messages": "^0.3.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^5.1.1",
     "ngx-pagination": "^4.1.0",
+    "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "save": "^2.4.0",
     "tslib": "^1.10.0",
+    "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -49,6 +52,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
